--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -36,6 +36,9 @@
         <h5>Comments</h5>
 
 
+        <button class="btn btn-primary m-3" data-toggle="collapse" data-target="#addComment"  aria-expanded="false" aria-controls="addComment" >Add</button>
+
+        <div class="collapse" id="addComment">
         <div class="card mb-3">
 
             <div class="card-body">
@@ -56,6 +59,8 @@
 
             <hr>
 
+
+        </div>
 
         </div>
 
